fix a bug when set body 12px and the child set .1rem cause font too small to see in IE11.3

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ input {
   border: 0;
 }
 pre {
-  font-size: .1rem;
+  font-size: .7rem;
 }
 
 
